# modbus-toolbox

./: .atomcode.md  .gitignore  Cargo.toml  CompileWithCross.sh  README.en.md  README.md  config.toml  sonar-project.properties
.atomcode/: instructions.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
locales/: ar.yml  bn.yml  de.yml  en.yml  es.yml  fr.yml  hi.yml  id.yml  it.yml  ja.yml  ko.yml  lzh.yml  pt.yml  ru.yml  tr.yml  ur.yml  vi.yml  zh-CN.yml
src/: logo.txt  main.rs  modbus.rs  ui.rs
src/ui/: client_server.rs  menu.rs  mod.rs  monitor.rs  tests_raw.rs
