[package]
name = "modbus_toolbox"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.50", features = ["rt-multi-thread", "macros", "signal", "time"] }
tokio-modbus = { version = "0.17",default-features = true,features = ["rtu-server","tcp-server"]}
tokio-serial = "5.4"

clap = { version = "4.5", features = ["derive"] }

ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }

futures = "0.3"
anyhow = "1.0"
toml = "*"
serde = { version = "1.0.228", features = ["derive"] }
dial9-tokio-telemetry = "0.2.0"
