[package]
name = "modbus_toolbox"
version = "0.4.0"
edition = "2021"
description = "A cross-platform Modbus RTU/TCP debugging toolbox with TUI interface, supporting server/client, silent RTU monitoring, multi-slave scanning, and register annotation"
license = "MIT"
repository = "https://github.com/weidong/modbus_toolbox"

[dependencies]
tokio = { version = "1.50", features = ["rt-multi-thread", "macros", "signal", "time"] }
tokio-modbus = { version = "0.17",default-features = true,features = ["rtu-server","tcp-server"]}
tokio-serial = "5.4"

clap = { version = "4.5", features = ["derive"] }

ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }

futures = "0.3"
anyhow = "1.0"
toml = "*"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
dial9-tokio-telemetry = "0.2.0"
rust-i18n = "4.0.0"
rand = "0.8"
